--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       context: .
       labels:
         - shadowsocks
+        - ghcr.io/ikesler/go-shadowsocks2:1.0.0
     ports:
       - 8488:8488
     environment:
@@ -26,6 +27,7 @@ services:
       context: .
       labels:
         - shadowsocks
+        - ghcr.io/ikesler/go-shadowsocks2:1.0.0
     environment:
       - ROUTE_TO_UPSTREAM_HOSTS=
     command: -s 'ss://AEAD_CHACHA20_POLY1305:your-password@:8488' -verbose
